--- a/RecipeMatch/Base.lproj/Main.storyboard
+++ b/RecipeMatch/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -99,8 +99,33 @@
                     <view key="view" contentMode="scaleToFill" id="K8T-sd-Ims">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bBd-mn-OD8">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <items>
+                                    <navigationItem title="Home" id="tGh-4p-ZQo">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="lOG-QP-nd4">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="1Sz-F6-vtj">
+                                                <rect key="frame" x="20" y="11" width="92" height="34.5"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Logout"/>
+                                                <connections>
+                                                    <action selector="logoutBtn:" destination="awU-g6-Cgv" eventType="touchUpInside" id="ueC-sV-7x3"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="IkR-en-L7Y"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bBd-mn-OD8" firstAttribute="trailing" secondItem="IkR-en-L7Y" secondAttribute="trailing" id="Enu-bo-GIn"/>
+                            <constraint firstItem="bBd-mn-OD8" firstAttribute="top" secondItem="IkR-en-L7Y" secondAttribute="top" id="hPO-Xw-rA8"/>
+                            <constraint firstItem="bBd-mn-OD8" firstAttribute="leading" secondItem="IkR-en-L7Y" secondAttribute="leading" id="zyx-ha-2pN"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="fTC-1b-U7u"/>
                 </viewController>
@@ -111,7 +136,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="EBY-cx-7bf">
             <objects>
-                <tabBarController id="tdd-MK-ilI" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" modalPresentationStyle="fullScreen" id="tdd-MK-ilI" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="XhI-37-be8"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iLK-Qb-MG4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
