added facebook signin user data to parse

--- a/RecipeMatch/Base.lproj/Main.storyboard
+++ b/RecipeMatch/Base.lproj/Main.storyboard
@@ -42,6 +42,17 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tO6-Jb-sWi">
+                                <rect key="frame" x="107" y="393" width="200" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="9WK-uF-dEt"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Facebook Login"/>
+                                <connections>
+                                    <action selector="facebookLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9BA-ub-NQC"/>
+                                </connections>
+                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="kPc-Nt-Hda">
                                 <rect key="frame" x="107" y="144" width="200" height="70"/>
                                 <constraints>
@@ -57,10 +68,12 @@
                             <constraint firstItem="kPc-Nt-Hda" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="FBx-qE-Mmh"/>
                             <constraint firstItem="wyj-3v-jYU" firstAttribute="leading" secondItem="AXM-To-nVK" secondAttribute="leading" id="Hue-Hw-PtN"/>
                             <constraint firstItem="kPc-Nt-Hda" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I9Y-VN-dPq"/>
+                            <constraint firstItem="tO6-Jb-sWi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JAq-XA-afa"/>
                             <constraint firstItem="wyj-3v-jYU" firstAttribute="trailing" secondItem="AXM-To-nVK" secondAttribute="trailing" id="TgC-l7-5IG"/>
                             <constraint firstItem="WDi-Y2-4db" firstAttribute="top" secondItem="wyj-3v-jYU" secondAttribute="bottom" constant="20" id="W6Y-UC-Cv1"/>
                             <constraint firstItem="AXM-To-nVK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="XcQ-tr-FE7"/>
                             <constraint firstItem="0hH-sA-qGm" firstAttribute="centerY" secondItem="WDi-Y2-4db" secondAttribute="centerY" id="f6E-ZR-9m7"/>
+                            <constraint firstItem="tO6-Jb-sWi" firstAttribute="top" secondItem="WDi-Y2-4db" secondAttribute="bottom" constant="20" id="fAt-gj-pPW"/>
                             <constraint firstItem="wyj-3v-jYU" firstAttribute="top" secondItem="AXM-To-nVK" secondAttribute="bottom" constant="20" id="hwk-V3-SAj"/>
                             <constraint firstItem="WDi-Y2-4db" firstAttribute="leading" secondItem="wyj-3v-jYU" secondAttribute="leading" id="pIg-X8-Vzc"/>
                             <constraint firstItem="0hH-sA-qGm" firstAttribute="trailing" secondItem="wyj-3v-jYU" secondAttribute="trailing" id="pwB-gn-dc8"/>
